# goodsync

./: .gitattributes  .gitignore  LICENSE  README.MD  README.ZH-CN.MD
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  config.yml  dependabot.yml  lock.yml  switch-openssl.bat
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/cross-compiles/: linux.yml
.github/workflows/: build-python-bak.yml  build-python.yml  build-with-cache.yml  publish_python.yml
python/: CMakeLists.txt  README.md  pyproject.toml  setup.cfg  setup.py
python/goodsync/: __init__.py  goodsync.c  goodsync.h  goodsync_warp.c
python/tests/: test.py
src/: CMakeLists.txt  base.c  base.h  crc.c  crc.h  example.c  goodsync.c
