[metadata]
name=goodsync
version=attr: goodsync.__version__
author=Mr.lin
author_email='adobe@outlook.my'
url=https://github.com/bitjerry/goodsync
description=Reverse engineering of GoodSync encrypted and decrypted file names
project_urls =
    GitHub: repo = https://github.com/bitjerry/goodsync/
license = Apache 2
license_files = LICENSE

[options]
python_requires = >=3.8
packages = goodsync

[options.exclude_package_data]
* =
    *.c
    *.h

[options.packages.find]
exclude = tests