[metadata]
name=goodsync
version=attr: goodsync.__version__
author=Mr.lin
author_email=adobe@outlook.my
url=https://github.com/bitjerry/goodsync
description=Reverse engineering of GoodSync encrypted and decrypted file names
project_urls =
    GitHub: repo = https://github.com/bitjerry/goodsync/
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2
license_files = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable

  Intended Audience :: Developers

  License :: OSI Approved :: Apache Software License

  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12

  Topic :: Software Development :: Libraries
  Topic :: Security :: Cryptography

[options]
python_requires = >=3.8
packages = goodsync

[options.exclude_package_data]
* =
    *.c
    *.h

[options.packages.find]
exclude = tests